<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/title_bg_shape"/>
    <ImageView
        android:id="@+id/title_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/title_icon"/>

    <RelativeLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_icon"
        android:layout_above="@id/button_reset"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:hint="@string/hint_phone"
            android:inputType="phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/edit_phone"
            android:layout_alignRight="@id/edit_phone"
            android:layout_alignEnd="@id/edit_phone"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorPrimary"
            android:text="手机号码"/>

        <EditText
            android:id="@+id/edit_chknum"
            android:layout_below="@+id/edit_phone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignLeft="@id/edit_phone"
            android:layout_alignStart="@id/edit_phone"
            android:layout_toLeftOf="@id/button_chknum"
            android:layout_toStartOf="@id/button_chknum"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:hint="@string/hint_chknum"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/edit_chknum"
            android:layout_alignRight="@id/edit_chknum"
            android:layout_alignEnd="@id/edit_chknum"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorPrimary"
            android:text="验证码"/>
        <Button
            android:id="@+id/button_chknum"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/edit_chknum"
            android:background="@drawable/button_bg_s"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/button_chknum"/>

        <EditText
            android:id="@+id/edit_passward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_chknum"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/edit_passward"
            android:layout_alignRight="@id/edit_passward"
            android:layout_alignEnd="@id/edit_passward"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorPrimary"
            android:text="密码"/>

        <EditText
            android:id="@+id/edit_pwdrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_passward"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="请再次输入登录密码"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/edit_pwdrev"
            android:layout_alignRight="@id/edit_pwdrev"
            android:layout_alignEnd="@id/edit_pwdrev"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorPrimary"
            android:text="密码确认"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_marginBottomPercent="5%"
        app:layout_widthPercent="70%"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_bg"
        style="@style/Button_Text"
        android:text="@string/button_reset"/>

</android.support.percent.PercentRelativeLayout>